--- a/view/common/block-layout/external-content.phtml
+++ b/view/common/block-layout/external-content.phtml
@@ -20,7 +20,7 @@ $hyperlink = $plugins->get('hyperlink');
 
 <div class="block full-width-css external-content grid-y grid-padding-y padding-1 flex-container align-middle media-text">
     <?php if (!empty($heading)): ?>
-    <h2><?= $escape($heading) ?></h2>
+    <h2 class="margin-bottom-0 medium-margin-bottom-1"><?= $escape($heading) ?></h2>
     <?php endif; ?>
 
 <div class="<?= $alignmentClass . ' captions-' . $captionPosition ?> media file">
