--- a/view/omeka/site/item/show_revised.phtml
+++ b/view/omeka/site/item/show_revised.phtml
@@ -55,7 +55,7 @@ if ($galleryDisplay) {
         </div>
     <?php elseif (count($directEmbedMedia) > 0): ?>
     <div id="itemfiles" class="<?php echo $mediaDisplay; ?>">
-        <div class="video-wrap">
+        <div class="video-wrap no-margin">
             <div class="responsive-embed">
                 <?php echo $media->render(); ?>
             </div>
