--- a/view/common/block-layout/item-listing.phtml
+++ b/view/common/block-layout/item-listing.phtml
@@ -21,7 +21,7 @@
 
     <div class="grid-x grid-margin-x flex-container align-spaced">
         <?php foreach ($attachments as $attachment): ?>
-            <div class="item-listing-item item resource flex-container flex-dir-column align-middle item-count-<?php echo $itemCount; ?>">
+            <div class="item-listing-item item resource flex-container flex-dir-column align-middle item-count-<?php echo $itemCount; ?> small-margin-bottom-1 medium-margin-bottom-2">
                 <?php
                 $item = $attachment->item();
                 if ($item):
