--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1925,6 +1925,7 @@ figcaption.orbit-caption.caption p {
 
 .colour-scheme-2 {
     background: $secondary-color;
+    color: $white;
 }
 
 .colour-scheme-3 {
@@ -1974,6 +1975,20 @@ figcaption.orbit-caption.caption p {
     }
     @include breakpoint(large) {
         font-size: 1.5 * $global-font-size;
+        padding: 0;
+    }
+}
+
+.text-treatment-3 {
+    color: $white;
+    font-weight: 400;
+    font-size: 1.5 * $global-font-size;
+    padding: $global-padding;
+    @include breakpoint(medium) {
+        font-size: 2 * $global-font-size;
+    }
+    @include breakpoint(xlarge) {
+        font-size: 2.5 * $global-font-size;
         padding: 0;
     }
 }
