--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1920,7 +1920,10 @@ figcaption.orbit-caption.caption p {
 }
 
 .colour-scheme-1 {
-    background: $black;
+    /*background: $black;*/
+    /*background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(0,0,0,0.8) 50%, rgba(80,46,103,0) 100%);*/ 
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0.3) 100%); 
+    color: $white;
 }
 
 .colour-scheme-2 {
@@ -1930,6 +1933,7 @@ figcaption.orbit-caption.caption p {
 
 .colour-scheme-3 {
     background: #502e05;
+    color: $white;
 }
 
 
@@ -1939,7 +1943,7 @@ figcaption.orbit-caption.caption p {
 }
 
 .colour-scheme-4 {
-    background: $alert-color;
+    background: $black;
 }
 
 .colour-scheme-1 p,
@@ -1960,6 +1964,10 @@ figcaption.orbit-caption.caption p {
         padding: 0;
     }
     @include breakpoint(large) {
+        font-size: 1.75 * $global-font-size;
+        padding: 0;
+    }
+    @include breakpoint(xlarge) {
         font-size: 2 * $global-font-size;
         padding: 0;
     }
