--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2029,6 +2029,11 @@ figcaption.orbit-caption.caption p {
 
 .slick-slider {
     width: 100%;
+    margin-bottom: 0!important;/*Added by JMc*/
+}
+
+.slick-slider.slick-dotted {
+    margin-bottom: 0!important;/*Added by JMc*/
 }
 
 ul.slick-dots {
@@ -2069,7 +2074,7 @@ ul.slick-dots {
 /*Slick Slider*/
 
 .slick-slide img {
-    height: 700px;
+    height: rem-calc(700px);
     width: 100%;
     object-fit: cover;
 }
@@ -2120,14 +2125,14 @@ ul.slick-dots li {
 .slick-next,
 .slick-prev {
     font-size: 2rem;
-    height: 2rem;
-    width: 2rem;
+    height: 2rem!important;
+    width: 2rem!important;
     z-index: 99999999999;
-    color: #fff;
+    color: #fff!important;
         @include breakpoint(large) { 
-        font-size: 3rem;
-        height: 3rem;
-        width: 3rem;
+        font-size: 3rem!important;
+        height: 3rem!important;
+        width: 3rem!important;
     }
 }
 
@@ -2149,6 +2154,13 @@ cursor: pointer;
     color: $warning-color;
 }
 
+.slick-autoplay-toggle-button {
+    top: 0 !important;
+    color: $white!important;
+    bottom: unset!important;
+
+}
+
 ul.slick-dots li button {
     border-radius: 66%;
     background: $secondary-color;
@@ -2166,7 +2178,7 @@ ul.slick-dots li button {
 }
 
 .slick-slide-preload img:first-child {
-    height: 700px;
+    height: rem-calc(700px);
     width: 100%;
     object-fit: cover;
 }
