--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -1683,11 +1683,8 @@ figcaption.orbit-caption.caption p {
 .section-intro-splash h2,
 .introductory-text h2 {
     font-size: 2 * $global-font-size;
-    @include breakpoint(large) {
-        font-size: 2.5 * $global-font-size;
-    }
     @include breakpoint(xlarge) {
-        font-size: 3 * $global-font-size;
+        font-size: 2.5 * $global-font-size;
     }
 }
 
@@ -1744,7 +1741,10 @@ figcaption.orbit-caption.caption p {
 .introductory-text p {
     font-size: 1.1 * $global-font-size;
         @include breakpoint(xlarge) {
-        font-size: 1.25 * $global-font-size;
+        font-size: 1.15 * $global-font-size;
+        }
+        @include breakpoint(xxlarge) {
+            font-size: 1.25 * $global-font-size;
         }
 }
 
@@ -1930,9 +1930,7 @@ figcaption.orbit-caption.caption p {
 }
 
 .colour-scheme-1 {
-    /*background: $black;*/
-    /*background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 35%, rgba(0,0,0,0.8) 50%, rgba(80,46,103,0) 100%);*/ 
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0.3) 100%); 
+    background: $black;
     color: $white;
 }
 
@@ -1953,7 +1951,7 @@ figcaption.orbit-caption.caption p {
 }
 
 .colour-scheme-4 {
-    background: $black;
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 50%, rgba(0,0,0,0.3) 100%);
     & h2 {
         color: $white;
     }
@@ -1976,15 +1974,15 @@ figcaption.orbit-caption.caption p {
     font-weight: 800;
     font-size: 1.2 * $global-font-size;
     @include breakpoint(medium) {
-        font-size: 1.5 * $global-font-size;
+        font-size: 1.4 * $global-font-size;
         padding: 0;
     }
     @include breakpoint(large) {
-        font-size: 1.75 * $global-font-size;
+        font-size: 1.5 * $global-font-size;
         padding: 0;
     }
-    @include breakpoint(xlarge) {
-        font-size: 2 * $global-font-size;
+    @include breakpoint(xxlarge) {
+        font-size: 1.9 * $global-font-size;
         padding: 0;
     }
 }
@@ -2124,7 +2122,7 @@ ul.slick-dots li {
 
 .slick-next,
 .slick-prev {
-    font-size: 2rem;
+    font-size: 2rem!important;
     height: 2rem!important;
     width: 2rem!important;
     z-index: 99999999999;
@@ -2137,11 +2135,11 @@ ul.slick-dots li {
 }
 
 .slick-next {
-right: 0;
+right: 0!important;
 }
 
 .slick-prev {
-left: 0;
+left: 0!important;
 }
 
 .slick-arrow {
@@ -2178,9 +2176,18 @@ ul.slick-dots li button {
 }
 
 .slick-slide-preload img:first-child {
-    height: rem-calc(700px);
+    height: rem-calc(400px);
     width: 100%;
     object-fit: cover;
+    @include breakpoint(medium) {
+        height: rem-calc(500px);
+        }
+    @include breakpoint(large) {
+        height: rem-calc(600px);
+        }
+    @include breakpoint(xxlarge) {
+        height: rem-calc(700px);
+        }
 }
 
 .slick-slide-preload:not(first-child)
