--- a/view/common/block-layout/section-intro-splash.phtml
+++ b/view/common/block-layout/section-intro-splash.phtml
@@ -1,5 +1,5 @@
 <div id="block" class="section-intro-splash full-width-css grid-x grid-padding-x margin-bottom-1 small-order-0 medium-order-1 flex-container block-<?php echo $this->blockId; ?> region <?php echo $this->regionClass; ?>" data-target-region-id="<?php echo $this->targetID; ?>">
-<div class="large-5 grid-y grid-padding-y padding-1 medium-padding-2 small-order-1 medium-order-0 title-area colour-scheme-2 item resource introduction">
+<div class="large-6 xlarge-5 xxlarge-4 grid-y grid-padding-y padding-1 medium-padding-2 small-order-1 medium-order-0 title-area colour-scheme-2 item resource introduction">
         <div class='flex-container flex-dir-column introductory-text'>
             <?php if (!empty($titleSlideTitle)): ?>
                 <h2 class="h1 padding-bottom-1"><?php echo $titleSlideTitle; ?></h2>
@@ -9,7 +9,7 @@
             <?php endif; ?>
         </div>
     </div>
-<div class="large-7 item-listing-image items">
+<div class="large-6 xlarge-7 xxlarge-8 item-listing-image items">
         <?php foreach ($attachments as $key => $attachment): ?>
             <?php
                 $item = $attachment->item();
