--- a/view/layout/header.phtml
+++ b/view/layout/header.phtml
@@ -2,7 +2,7 @@
     <a href="http://www.manchester.ac.uk/library"><img
             src="https://assets.manchester.ac.uk/corporate/images/design/logo-university-of-manchester.png"
             alt="The University of Manchester Library logo" class="university-logo" /></a>
-    <div class="site-heading">
+    <div class="site-heading padding-bottom-1">
         <p>Manchester Digital Exhibitions</p>
     </div>
     <div class="full-screen-search">
