--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -229,6 +229,12 @@ header .top-bar-left {
     align-items: center;
 }
 
+header .top-bar-right {
+    @include breakpoint(medium down) {
+        display: none;
+    }
+}
+
 .menu a.dropdown-toggle {
     display: flex;
     justify-content: space-between;
@@ -1407,14 +1413,14 @@ nav.breadcrumbs {
 
 nav.title-bar {
     order: 0;
-    @include breakpoint(526) {
+    @include breakpoint(545) {
         order: 1;
     }
 }
 
 .site-heading {
     order: 1;
-    @include breakpoint(526) {
+    @include breakpoint(545) {
         order: 0;
     }
 }
@@ -1820,6 +1826,11 @@ figcaption.orbit-caption.caption p {
     @include breakpoint(xxlarge) {
         height: 37rem;
     }
+}
+
+.item-listing-item.item-count-1 img {
+    width: 100%;
+    height: 100%;
 }
 
 .item-listing-item {
