--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -245,7 +245,9 @@ header .top-bar-right {
 }
 
 .submenu-toggle:after {
+    @include breakpoint(large) {
     border-color: #fff transparent transparent;
+    }
 }
 
 .title-bar {
