Revised image cover block

--- a/view/common/block-layout/resource-text-full-size-image-cover-dark.phtml
+++ b/view/common/block-layout/resource-text-full-size-image-cover-dark.phtml
@@ -78,7 +78,7 @@ $lang = $filterLocale ? $this->lang() : null;
             <?php endforeach; ?>
         </div>
     </div>
-    <div class="title-area large-5 flex-container grid-y grid-padding-y flex-dir-column align-middle align-center font-wide padding-1">
+    <div class="title-area background-colour-uom-footer large-5 flex-container grid-y grid-padding-y flex-dir-column align-middle align-center font-wide padding-1">
     <h3><?= $link ?></h3>
         <?= $html ?>
     </div>
