Updated html introduction block

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2488,6 +2488,11 @@ html, body {
     font-weight: 600;
 }
 
+/*Large fonts*/ 
+.font-large {
+    font-size: $global-font-size * 1.2;
+}
+
 .no-margin {
     margin: unset;
 }
