--- a/view/common/block-layout/html-introduction-dark.phtml
+++ b/view/common/block-layout/html-introduction-dark.phtml
@@ -9,7 +9,7 @@
 $escape = $this->plugin('escapeHtml');
 ?>
 
-<div class="full-width-css colour-scheme-4 <?= $this->escapeHtmlAttr($divclass) ?>">
+<div class="full-width-css colour-scheme-4 splash padding-1 padding-large-2 padding-xlarge-3 margin-top-offset font-wide <?= $this->escapeHtmlAttr($divclass) ?>">
     <div class="grid-x grid-container">
         <div class="page-header">
             <?php if (!empty($heading)): ?>
