Revisions to Annona CSS

--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -147,7 +147,7 @@ endif;
         <script>
           $(document).foundation(); 
         </script>
-        <script type="text/javascript" src="<?php echo $this->assetUrl('js/annona-copy.js'); ?>"></script>
+        <script type="text/javascript" src="<?php echo $this->assetUrl('js/annona.js'); ?>"></script>
         <?php
             echo $this->inlineScript()
             ->prependFile($this->assetUrl('js/img-orientation.js'));
