--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2482,6 +2482,89 @@ html, body {
     overflow-x: hidden;
 }
 
+/*Annona*/ 
+
+#storyboard_viewer.annonaview.storyboard_viewer {
+    background: $black;
+    }
+
+.annonaview .content .attribution, .annonaview .content .authorship, .annonaview .content .tags {
+    font-style: unset;
+    }
+
+button#autorunButton,
+button#infoButton,
+button#tagsButton,
+button#homeButton,
+button#keyboardButton,
+button#overlayButton {
+display: none!important;
+}
+
+.annotation {
+overflow: unset!important;
+}
+
+.authorship {
+display: none;
+}
+
+button#info_button.annocontrols_button,
+button#prev_button.annocontrols_button,
+button#next_button.annocontrols_button,
+button#close_button.annocontrols_button,
+button#hide_button.annocontrols_button,
+button#settings_button.annocontrols_button,
+button#settingsButton.toolbarButton {    
+display: none!important;
+}
+
+.rect:hover {
+    background: gray;
+    opacity: .4;
+}
+
+.overlay>svg>:hover {
+    fill: gray;
+    fill-opacity: .4!important;
+}
+
+polygon>.svgactive:hover {
+    fill: gray;
+    fill-opacity: .4!important;
+}
+
+.annotation>div {
+    @include breakpoint(medium) {
+    padding: 1em;
+    }
+}
+
+#storyboard_viewer button:hover {
+    cursor: pointer;
+}
+
+.active.rect {
+    @include breakpoint(medium) {
+    outline: 4px dotted #ff0!important;
+    }
+}
+.rect {
+    @include breakpoint(medium) {
+    border: 4px solid #add8e6;
+    }
+}
+
+.overlay>svg>* {
+    stroke-width: 4px;
+}
+
+.defaultview .annotation:not(.right):not(.left):not(.bottom):not(.top):not(.no_toolbar_annotation) {
+    @include breakpoint(600 down) {
+       top: calc(1.6rem + 7px)!important;
+    }
+}
+
 /*General Classes*/ 
 /*Bold fonts*/
 .font-bold {
