Additional updates to lang select

--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -2651,7 +2651,7 @@ polygon>.svgactive:hover {
     display: none;
 }
 #switcher-toggle {
-    background: url("/asset/files/Arrow-down-white.svg");
+    background: url("https://www.digitalexhibitions.manchester.ac.uk/files/asset/Arrow-down-white.svg");
     background-position: center;
     background-size: 1.5em;
     background-repeat: no-repeat;
