--- a/view/common/header-dropdown.phtml
+++ b/view/common/header-dropdown.phtml
@@ -3,7 +3,7 @@
             src="https://assets.manchester.ac.uk/corporate/images/design/logo-university-of-manchester.png"
             alt="The University of Manchester Library logo" /> </a>
     </div>
-    <div class="site-heading padding-bottom-1">
+    <div class="site-heading">
         <p>Manchester Digital Exhibitions</p>
     </div>
     <div id="lang">
