--- a/asset/scss/_omeka.scss
+++ b/asset/scss/_omeka.scss
@@ -337,14 +337,29 @@ body.vertical-menu header .desktop {
     }
 }
 
+.title-bar button {
+    margin: 0;
+    @include breakpoint(medium) {
+        margin: 0 $global-margin 0 0;
+    }
+}
+
 /*Set size of University logo*/
 .university-logo {
-    margin: rem-calc(12) rem-calc(24);
+    margin: rem-calc(12);
+    display: flex;
+    flex-grow: 3;
+    @include breakpoint(339) {
+        margin: rem-calc(12) rem-calc(24);
+    }
+    @include breakpoint(630) {
+        flex-grow: unset;
+    }
 }
 
 .university-logo img {
-    width: rem-calc(169);
-    height: rem-calc(70);
+        width: rem-calc(169);
+        height: rem-calc(70);
 }
 
 /*Set 'Manchester Digital Exhibitions text*/
@@ -362,8 +377,15 @@ body.vertical-menu header .desktop {
 
 /*Language Selector*/
 #lang {
-    order: 2;
-    margin: 0 1 0 1em;
+    display: flex;
+    order: 0;
+    margin: 0;
+    @include breakpoint(355) {
+        margin: 0 $global-margin 0 0;
+    }
+    @include breakpoint(medium) {
+        margin: 0.5 * $global-margin;
+    }
 }
 
 ul.language-switcher.locale-code {
@@ -1417,20 +1439,13 @@ nav.breadcrumbs {
 
 /*Header*/
 .site-heading {
-    width: rem-calc(225px);
+    width: rem-calc(225);
     margin: 0 rem-calc(12);
 }
 
-nav.title-bar {
-    order: 0;
-    @include breakpoint(545) {
-        order: 1;
-    }
-}
-
 .site-heading {
-    order: 1;
-    @include breakpoint(545) {
+    order: 2;
+    @include breakpoint(630) {
         order: 0;
     }
 }
@@ -2609,17 +2624,17 @@ polygon>.svgactive:hover {
 
 .active.rect {
     @include breakpoint(medium) {
-    outline: 4px dotted #ff0!important;
+    outline: rem-calc(4px) dotted #ff0!important;
     }
 }
 .rect {
     @include breakpoint(medium) {
-    border: 4px solid #add8e6;
+    border: rem-calc(4px) solid #add8e6;
     }
 }
 
 .overlay>svg>* {
-    stroke-width: 4px;
+    stroke-width: rem-calc(4px);
 }
 
 .defaultview .annotation:not(.right):not(.left):not(.bottom):not(.top):not(.no_toolbar_annotation) {
@@ -2637,20 +2652,23 @@ polygon>.svgactive:hover {
     justify-content: center;
     align-items: center;
     background: #393a3c;
-    border-radius: 20px;
+    border-radius: rem-calc(20px);
 }
 #language-bar button {
     padding: 1em;
 }
 .language-label:before {
     content: "";
-    margin: 0 0 0 $global-margin;
+    margin: 0 0 0 0.5 * $global-margin;
     background: url("https://www.digitalexhibitions.manchester.ac.uk/files/asset/globe-svgrepo-com-white.svg") no-repeat;
-    width: 26px;
-    height: 26px;
-    background-size: 26px;
+    width: rem-calc(18px);
+    height: rem-calc(18px);
+    background-size: rem-calc(18px);
     @include breakpoint(large) {
         margin: 0 $global-margin;
+        width: rem-calc(26px);
+        height: rem-calc(26px);
+        background-size: rem-calc(26px);
     }
 }
 .language-label {
@@ -2658,7 +2676,6 @@ polygon>.svgactive:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 0.1 * $global-padding;
     @include breakpoint(large) {
         padding: 0.5 * $global-padding 1.5 * $global-padding 0.5 * $global-padding 0.5 * $global-padding;
     }
@@ -2678,9 +2695,12 @@ a.language-show {
 #switcher-toggle {
     background: url("https://www.digitalexhibitions.manchester.ac.uk/files/asset/Arrow-down-white.svg");
     background-position: center;
-    background-size: 1.5rem;
+    background-size: 1rem;
     background-repeat: no-repeat;
     margin-left: 0;
+    @include breakpoint(large) {
+        background-size: 1.5rem;   
+    }
 }
 .language-switcher.closed:checked+.language-switcher {
     max-height: 100px;
@@ -2700,11 +2720,11 @@ div.language-switcher {
     position: absolute;
     list-style: none;
     right: 0;
-    line-height: 36px;
+    line-height: rem-calc(36px);
     margin: 6px 0 0;
     padding: 12px 18px;
     background: #fff;
-    border-radius: 6px;
+    border-radius: rem-calc(6px);
     box-shadow: 0 0 20px rgba(0, 0, 0, .1);
     z-index: 99
 }
@@ -2717,10 +2737,6 @@ div.language-switcher {
 .language-switcher li a:hover,
 .language-switcher a.checked {
     opacity: 1
-}
-#lang {
-    order: 2;
-    margin: 0 1em 0 1em;
 }
 ul.language-switcher.locale-code {
     padding-inline-start: 0;
